RESOLVED FIXED224018
[iOS] '-webkit-appearance: none' is not respected for searchfield decorations
https://bugs.webkit.org/show_bug.cgi?id=224018
Summary [iOS] '-webkit-appearance: none' is not respected for searchfield decorations
Aditya Keerthi
Reported 2021-03-31 14:20:04 PDT
...
Attachments
Patch (45.57 KB, patch)
2021-03-31 14:26 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-03-31 14:26:01 PDT
EWS
Comment 2 2021-04-01 06:37:08 PDT
Committed r275355: <https://commits.webkit.org/r275355> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424821 [details].
Radar WebKit Bug Importer
Comment 3 2021-04-01 06:38:13 PDT
Note You need to log in before you can comment on or make changes to this bug.